--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ src/example_files/MES_400C_C3_ODH_O2_Switching/*
 src/example_files/CeO2_DRIFTS_Baseline_Correction/*
 src/example_files/UV_vis_match_NAP_XPS/*
 src/example_files/XPS/*
+src/example_files/jupyter_notebook_tutorials/computing_pure_components_tutorial_then_vanadia.ipynb
+src/example_files/SI_zip.zip
+src/example_files/SI_zip/*
+src/example_files/jupyter_notebook_tutorials/*.png
